Error from last commit solved

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules/
+.meteor/.finished-upgraders
+.meteor/packages
+.meteor/versions
+.meteor/release
+*.finished-upgraders
+.meteor/packages
+.meteor/release
+.meteor/versions
