Signup process completed
Needs some improvements

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "jquery-validation": "^1.15.1",
     "meteor-node-stubs": "~0.2.0",
+    "node-gyp": "^3.4.0",
     "react-router": "^2.8.0",
     "wingcss": "^0.1.7"
   }
