--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery-validation": "^1.15.1",
     "meteor-node-stubs": "~0.2.0",
     "node-gyp": "^3.4.0",
+    "react-komposer": "^1.13.1",
     "react-router": "^2.8.0",
     "wingcss": "^0.1.7"
   }
