--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "jquery-validation": "^1.15.1",
     "meteor-node-stubs": "~0.2.0",
+    "moment": "^2.17.1",
     "node-gyp": "^3.4.0",
+    "react": "^15.4.2",
+    "react-datepicker": "^0.40.0",
     "react-komposer": "^1.13.1",
     "react-router": "^2.8.0",
     "wingcss": "^0.1.7"
