--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-gyp": "^3.4.0",
     "react": "^15.4.2",
     "react-datepicker": "^0.40.0",
+    "react-dom": "^15.4.2",
     "react-komposer": "^1.13.1",
     "react-router": "^2.8.0",
     "wingcss": "^0.1.7"
