--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "myexpense",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "jquery-validation": "^1.15.1",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.17.1",
