--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.38",
     "bcrypt": "^1.0.3",
     "jquery-validation": "^1.15.1",
     "meteor-node-stubs": "~0.2.0",
